[tool.poetry]
name = "dailyfoodtracking"
version = "0.1.0"
description = "A diet tracking app"
authors = ["ridabourji <70974349+ridabourji@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
plotly = "^5.24.0"
streamlit-tags = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
